policy/manifests/booksapp/allow_namespace.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: booksapp-only
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    kind: Namespace
    name: booksapp
  requiredAuthenticationRefs:
    - name: booksapp-accounts
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
