policy/manifests/booksapp/allow_viz.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-viz
  namespace: booksapp
spec:
  targetRef:
    kind: Namespace
    name: booksapp
  requiredAuthenticationRefs:
    - name: viz-apps
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
